Website by Sahil Nayyer

--- a/about.html
+++ b/about.html
@@ -412,6 +412,7 @@ Author URL: http://w3layouts.com
                   of Services</a></li>
             </ul>
           </div>
+          <!-- Website by Sahil Nayyer -->
           <div class="col-lg-3 col-md-6 sub-two-right mt-md-0 mt-4">
             <h6>Research</h6>
             <ul>
